Fixed -j1 topological message generation error. Added appropriate comments to all new files. Fixed BBB_I2C tools write funtion memory leak. Tested and working for single_imu case.
Signed-off-by: Jake Reher <jake.reher@gmail.com>

--- a/param/single.yaml
+++ b/param/single.yaml
@@ -4,5 +4,5 @@ imu/single/bus: 1
 imu/single/addr: 0x68
 imu/single/chan: 0
 imu/single/bias_path: "/home/debian/ros_imu/bias/9a.txt"
-imu/single/isvertical: true
+imu/single/isvertical: false
 imu/single/freq: 200
