--- a/imu_common/CMakeLists.txt
+++ b/imu_common/CMakeLists.txt
@@ -60,7 +60,8 @@ add_library(imu_common src/MPU9150.cpp include/MPU9150.h
 	include/butterworth_util.h include/MPU_RegMap.h
 	include/limits.hpp include/common_assert.hpp
   include/pca9547.h src/pca9547.cpp
-  include/ambcap.h src/ambcap.cpp)
+  include/ambcap.h src/ambcap.cpp
+  include/ambcap_pros.h src/ambcap_pros.cpp)
 
 add_dependencies(imu_common imu_common_gencpp)
 
