--- a/imu_common/CMakeLists.txt
+++ b/imu_common/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   std_msgs
   sensor_msgs
+  yaml_eigen_utilities
 )
 
 ## Generate messages in the 'msg' folder
@@ -27,6 +28,7 @@ find_package(catkin REQUIRED COMPONENTS
    geometry_msgs
  )
 
+find_package(eigen3 REQUIRED)
 
 ###################################
 ## catkin specific configuration ##
@@ -39,9 +41,15 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 
 catkin_package(
-  INCLUDE_DIRS include
+  INCLUDE_DIRS
+    include
+    ${EIGEN3_INCLUDE_DIR}
   LIBRARIES imu_common
+  DEPENDS eigen3
+  CATKIN_DEPENDS yaml_eigen_utilities
 )
+
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 ###########
 ## Build ##
@@ -49,9 +57,10 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-include_directories(include)
 include_directories(
+  include
   ${catkin_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIR}
 )
 
 add_library(imu_common src/MPU9150.cpp include/MPU9150.h 
@@ -61,7 +70,8 @@ add_library(imu_common src/MPU9150.cpp include/MPU9150.h
 	include/limits.hpp include/common_assert.hpp
   include/pca9547.h src/pca9547.cpp
   include/ambcap.h src/ambcap.cpp
-  include/ambcap_pros.h src/ambcap_pros.cpp)
+  include/ambcap_pros.h src/ambcap_pros.cpp
+  ${catkin_Libraries})
 
 add_dependencies(imu_common imu_common_gencpp)
 
