Proxi subscriber began, updated prosthetic code to only use two sensors.

--- a/proxi_subs/CMakeLists.txt
+++ b/proxi_subs/CMakeLists.txt
@@ -1,17 +1,14 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(capture_legs)
+project(proxi_subs)
 add_definitions(-std=c++0x)
-
-set(IMU_COMMON_PATH "../imu_common")
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  imu_common
   roscpp
   rospy
-  std_msgs
-  std_srvs
   imu_common
 )
 
@@ -31,10 +28,15 @@ include_directories(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 
 catkin_package(
-#  INCLUDE_DIRS include
+  INCLUDE_DIRS include
   LIBRARIES capture_legs
-  CATKIN_DEPENDS roscpp rospy sensor_msgs std_msgs imu_common
+  CATKIN_DEPENDS roscpp rospy std_msgs imu_common
 #  DEPENDS system_lib
+)
+
+include_directories(
+  include
+  ${catkin_INCLUDE_DIRS}
 )
 
 ###########
@@ -48,9 +50,5 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(capture_legs src/capture_legs.cpp)
-target_link_libraries(capture_legs ${catkin_LIBRARIES} imu_common)
-add_dependencies(capture_legs cap_gencpp)
-
-add_executable(proxi_tau src/proxi_tau.cpp)
-target_link_libraries(proxi_tau ${catkin_LIBRARIES} imu_common)
+add_executable(proxi_subs src/proxi_subs.cpp)
+target_link_libraries(proxi_subs ${catkin_LIBRARIES} imu_common)
