--- a/imu_common/package.xml
+++ b/imu_common/package.xml
@@ -39,11 +39,24 @@
   <!--   <run_depend>message_runtime</run_depend> -->
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
+  <build_depend>eigen3</build_depend>
+  <run_depend>eigen3</run_depend>
+
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
+
+  <build_depend>control_utilities</build_depend>
+  <run_depend>control_utilities</run_depend>
+
+  <build_depend>roslib_utilities</build_depend>
+  <run_depend>roslib_utilities</run_depend>
+
+  <build_depend>yaml_eigen_utilities</build_depend>
+  <run_depend>yaml_eigen_utilities</run_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
