Code now running one IMU - publishing acc/gyr/mag
Signed-off-by: jreher <jreher@jreher-aames-laptop.(none)>

--- a/imu_common/CMakeLists.txt
+++ b/imu_common/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(catkin REQUIRED COMPONENTS
    DIRECTORY msg
    FILES
    imu.msg
+   yei_msg.msg
  )
 
  ## Generate added messages and services with any dependencies listed here
