--- a/yei_sensor/CMakeLists.txt
+++ b/yei_sensor/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  imu_common
 )
 
 ## Add Python Scripts Folder to editor
@@ -86,7 +87,7 @@ catkin_python_setup()
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES yei_sensor
-  CATKIN_DEPENDS roscpp rospy std_msgs
+  CATKIN_DEPENDS roscpp rospy std_msgs imu_common
   DEPENDS system_lib
 )
 
@@ -128,7 +129,7 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
  install(PROGRAMS
-   bin/yei_sensor
+   src/yei_sensor.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
 
