--- a/imu_common/package.xml
+++ b/imu_common/package.xml
@@ -57,6 +57,8 @@
   <build_depend>yaml_eigen_utilities</build_depend>
   <run_depend>yaml_eigen_utilities</run_depend>
 
+  <build_depend>yei_sensor</build_depend>
+  <run_depend>yei_sensor</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
