Python wrapper now has initialization, finds python packages and yei module. Next step is providing wrapper function calls.
Signed-off-by: jreher <jreher@jreher-aames-laptop.(none)>

--- a/yei_sensor/CMakeLists.txt
+++ b/yei_sensor/CMakeLists.txt
@@ -7,12 +7,13 @@ project(yei_sensor)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
+  roslib
   message_generation
   sensor_msgs
 )
 
 find_package(PythonInterp)
-find_package(PythonLibs)
+find_package(PythonLibs REQUIRED)
 
 ## Add Python Scripts Folder to editor
 FILE(GLOB yei_scripts "src/*" "bin/*")
@@ -20,22 +21,22 @@ add_custom_target(yei_scripts_location SOURCES ${yei_scripts})
 
 catkin_python_setup()
 
- add_message_files(
+add_message_files(
    DIRECTORY msg
    FILES
    yei_msg.msg
- )
- 
+)
+
  ## Generate added messages and services with any dependencies listed here
- generate_messages(
+generate_messages(
    DEPENDENCIES
    std_msgs
    geometry_msgs
- )
+)
 
 catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES yei_sensor
+  INCLUDE_DIRS include ${PYTHON_INCLUDE_DIRS}
+  LIBRARIES yei_sensor ${PYTHON_LIBRARIES}
 )
 
 include_directories(
@@ -49,7 +50,6 @@ add_library(yei_sensor
   src/yei_wrapper.cpp 
   include/yei_wrapper.h
 )
-
 add_dependencies(yei_sensor yei_sensor_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
@@ -60,7 +60,7 @@ target_link_libraries(yei_sensor
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
- install(PROGRAMS
+install(PROGRAMS
    src/yei_sensor.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
- )
+)
