--- a/capture_legs/package.xml
+++ b/capture_legs/package.xml
@@ -51,6 +51,9 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>imu_common</run_depend>
 
+  <build_depend>gperftools_21</build_depend>
+  <run_depend>gperftools_21</run_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
