--- a/imu_common/package.xml
+++ b/imu_common/package.xml
@@ -15,13 +15,16 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>roslib</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>yei</build_depend>
+  <build_depend>yaml_eigen_utilities</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>roslib</run_depend>
   <run_depend>message_runtime</run_depend>
-
+  <run_depend>yei</run_depend>
+  <run_depend>yaml_eigen_utilities</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
