--- a/imu_common/package.xml
+++ b/imu_common/package.xml
@@ -18,6 +18,7 @@
   <build_depend>yei</build_depend>
   <build_depend>yaml_eigen_utilities</build_depend>
   <build_depend>eigen_utilities</build_depend>
+  <build_depend>roslib_utilities</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -27,6 +28,8 @@
   <run_depend>yei</run_depend>
   <run_depend>yaml_eigen_utilities</run_depend>
   <run_depend>eigen_utilities</run_depend>
+  <run_depend>roslib_utilities</run_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
